# usta

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  seed.py
backend/app/api/: __init__.py  account.py  admin.py  ai.py  auth.py  billing.py  catalog.py  estimates.py  fuel.py  live.py  maintenance.py  mechanics.py  parts.py  stats.py  tasks.py  vehicles.py
backend/app/core/: __init__.py  deps.py  rate_limit.py  security.py
backend/app/domain/: __init__.py  ai_errors.py  catalog.py  catalog_data.json  cost_estimates.py  enums.py  guides.py  maintenance.py  models.py  prep.py  pricing.py  safety.py  schemas.py  tasks.py  taxonomy.py
backend/app/services/: __init__.py  auth_service.py  cost_service.py  fuel_service.py  maintenance_service.py  subscription_service.py  vehicle_service.py
backend/app/static/: admin.html  privacy.html  terms.html
backend/app/tools/: __init__.py  eval_vision.py
backend/prompts/audio/: _base.md
backend/prompts/dashboard/: _base.md
backend/prompts/dtc/: _base.md
backend/scripts/: add_vehicles.py  add_vehicles2.py  diagnose_test.py
backend/tests/: conftest.py  test_account.py  test_ai.py  test_auth.py  test_catalog.py  test_config.py  test_cost_estimates.py  test_diagnoses.py  test_fuel.py  test_guides.py  test_live_api.py  test_live_service.py  test_maintenance.py  test_mechanics.py  test_meta.py  test_monetization.py  test_prompts.py  test_tasks.py  test_vehicles.py
(+116 files in other folders)
