[project]
name = "usta-backend"
version = "0.1.0"
description = "Usta — araç sahipleri için AI bakım asistanı API'si"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
